4. Преобразование List в Map. [#282054]