@@ -10,13 +10,13 @@ import static org.hamcrest.MatcherAssert.assertThat;
 public class SchoolTest {
     private final List<Student> students = Arrays.asList(new Student(50),
             new Student(30), new Student(45), new Student(100),
-            new Student(65), new Student(80));
+            new Student(65), new Student(80), new Student(45));
 
     @Test
     public void whenScoreFromZeroToFifty() {
         List<Student> result = School.collect(students,
                 st -> st.getScore() < 50 && st.getScore() >= 0);
-        assertThat(result, is(Arrays.asList(new Student(30), new Student(45))));
+        assertThat(result, is(List.of(new Student(30), new Student(45), new Student(45))));
     }
 
     @Test
